<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:clipToPadding="false"
android:descendantFocusability="blocksDescendants"
android:padding="16dp">

<ImageView
    android:id="@+id/image_poster"
    android:layout_width="200dp"
    android:layout_height="300dp"
    android:layout_marginTop="48dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:ignore="ContentDescription" />

<TextView
    android:id="@+id/tv_title"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="48dp"
    android:layout_marginEnd="8dp"
    android:textSize="18sp"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@id/image_poster"
    app:layout_constraintTop_toTopOf="parent"
    tools:text="@string/title" />

<TextView
    android:id="@+id/tv_date"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="8dp"
    android:textSize="16sp"
    app:layout_constraintTop_toBottomOf="@id/tv_title"
    app:layout_constraintStart_toEndOf="@id/image_poster"
    app:layout_constraintEnd_toEndOf="parent"
    tools:text="@string/date" />

<TextView
    android:id="@+id/tv_genre"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="8dp"
    android:textSize="16sp"
    app:layout_constraintTop_toBottomOf="@id/tv_date"
    app:layout_constraintStart_toEndOf="@id/image_poster"
    app:layout_constraintEnd_toEndOf="parent"
    tools:text="@string/genre" />

<TextView
    android:id="@+id/title_director"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="8dp"
    android:textSize="16sp"
    android:textStyle="bold"
    app:layout_constraintTop_toBottomOf="@id/tv_genre"
    app:layout_constraintStart_toEndOf="@id/image_poster"
    app:layout_constraintEnd_toEndOf="parent"
    android:text="@string/director" />

<TextView
    android:id="@+id/tv_director"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:textSize="16sp"
    app:layout_constraintTop_toBottomOf="@id/title_director"
    app:layout_constraintStart_toEndOf="@id/image_poster"
    app:layout_constraintEnd_toEndOf="parent"
    tools:text="@string/director" />

<TextView
    android:id="@+id/title_overview"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="8dp"
    android:textSize="18sp"
    android:textStyle="bold"
    app:layout_constraintTop_toBottomOf="@id/image_poster"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:text="@string/overview" />

<TextView
    android:id="@+id/tv_overview"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:textSize="16sp"
    app:layout_constraintTop_toBottomOf="@id/title_overview"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
