<resources>
    <string name="app_name">MovieKu</string>
    <string name="title_activity_detail_movie">Detail Movie</string>
    <string name="title_activity_detail_tvshow">Detail TV Show</string>
    <string name="home">Home</string>
    <string name="movie">Movie</string>
    <string name="tvshow">TV Show</string>
    <string name="title">Judul</string>
    <string name="date">Tanggal</string>
    <string name="director">Director</string>
    <string name="creator">Creator</string>
    <string name="genre">Genre</string>
    <string name="overview">Overview</string>
    <string name="share_text">Segera nikmati layanan film streaming %s favorit Anda.</string>
</resources>